# VoxTutor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/scripts/: push_wiki.py
.github/workflows/: ci.yml  wiki-init.yml
_wiki/: Home.md
docs/: ARCHITECTURE.md  DECISIONS.md
evals/: RESULTS.md  gate.py  harness.py  metrics.py
examples/: run_scoring.py
tests/: conftest.py  test_align.py  test_cli.py  test_config.py  test_dissociation.py  test_gate.py  test_metrics.py  test_phonemes.py  test_runner.py  test_scipy_check.py  test_scorers.py  test_synth.py
voxtutor/: __init__.py  align.py  cli.py  config.py  metrics.py  phonemes.py  runner.py  scipy_check.py  scorers.py  synth.py  types.py
